res/css/short-pixel-bar.css
/**
CSS for features that are displayed on all Admin page, like the bar status icon and some alerts.
 */
li.shortpixel-toolbar-processing > a.ab-item > div,
#wpadminbar li.shortpixel-toolbar-processing > a.ab-item > div{
    /*    background-image: url("../img/loading-dark-big.gif");
        background-position: center center;
        background-repeat: no-repeat;
    */    height: 33px;
    margin-top: -1px;
    padding: 0 3px;
}
li.shortpixel-toolbar-processing > a.ab-item > div > img,
#wpadminbar li.shortpixel-toolbar-processing > a.ab-item > div > img{
    margin-right: 2px;
    margin-top: 6px;
}
li.shortpixel-toolbar-processing span.shp-alert,
#wpadminbar li.shortpixel-toolbar-processing > a.ab-item > div > span.shp-alert{
    display:none;
}
li.shortpixel-toolbar-processing.shortpixel-alert > a.ab-item > div > span.shp-alert,
#wpadminbar li.shortpixel-toolbar-processing.shortpixel-alert > a.ab-item > div > span.shp-alert{
    display: inline;
    font-size: 26px;
    color: red;
    font-weight: bold;
    vertical-align: top;
}
li.shortpixel-toolbar-processing.shortpixel-alert > a.ab-item > div,
#wpadminbar li.shortpixel-toolbar-processing.shortpixel-alert > a.ab-item > div{
    background-image: none;
}

#wpadminbar .shortpixel-toolbar-processing .cssload-container {
    width: 100%;
    height: 24px;
    text-align: center;
    position: absolute;
    top: 0px;
    left: -1px;
}
#wpadminbar .shortpixel-toolbar-processing.shortpixel-quota-exceeded .cssload-container,
#wpadminbar .shortpixel-toolbar-processing.shortpixel-alert .cssload-container{
    display: none;
}

#wpadminbar .shortpixel-toolbar-processing .cssload-speeding-wheel {
    width: 24px;
    height: 24px;
    opacity: 0.7;
    margin: 0 auto;
    border: 4px solid rgb(28,191,203);
    border-radius: 50%;
    border-left-color: transparent;
    animation: cssload-spin 2000ms infinite linear;
            -o-animation: cssload-spin 2000ms infinite linear;
            -ms-animation: cssload-spin 2000ms infinite linear;
            -webkit-animation: cssload-spin 2000ms infinite linear;
            -moz-animation: cssload-spin 2000ms infinite linear;
}

@keyframes cssload-spin {
	100%{ transform: rotate(360deg); transform: rotate(360deg); }
}

@-o-keyframes cssload-spin {
	100%{ -o-transform: rotate(360deg); transform: rotate(360deg); }
}

@-ms-keyframes cssload-spin {
	100%{ -ms-transform: rotate(360deg); transform: rotate(360deg); }
}

@-webkit-keyframes cssload-spin {
	100%{ -webkit-transform: rotate(360deg); transform: rotate(360deg); }
}

@-moz-keyframes cssload-spin {
	100%{ -moz-transform: rotate(360deg); transform: rotate(360deg); }
}


.sp-quota-exceeded-alert {
    background-color: #fff;
    border-left: 4px solid #ff0000;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
    padding: 1px 12px;
}
.shortpixel-clearfix {
    width:100%;
    float:left;
}
.short-pixel-notice-icon {
    float:left;
    margin: 10px 10px 10px 0;
}

.sp-conflict-plugins {
    display: table;
    border-spacing: 10px;
    border-collapse: separate;
}
.sp-conflict-plugins li {
    display: table-row;
}
.sp-conflict-plugins li > * {
    display: table-cell;
}

li.sp-conflict-plugins-list {
    line-height: 28px;
    list-style: disc;
    margin-left: 80px;
}
li.sp-conflict-plugins-list a.button {
    margin-left: 10px;
}

